[gd_scene load_steps=6 format=3 uid="uid://cmyq8omok1s12"]

[ext_resource type="Script" path="res://Scripts/Password Generator.gd" id="1_1k8wi"]
[ext_resource type="Theme" uid="uid://btk47cl5s6uog" path="res://Scenes/Label.tres" id="2_osnlk"]
[ext_resource type="Theme" uid="uid://yfg1iqwkk1d8" path="res://Scenes/LineEdit_Theme.tres" id="3_2mthw"]
[ext_resource type="Theme" uid="uid://cp3y0a08cy576" path="res://Scenes/Button.tres" id="4_6lchc"]

[sub_resource type="Theme" id="Theme_ue65u"]

[node name="New Password Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1k8wi")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.364706)

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -187.0
offset_top = -141.0
offset_right = 189.0
offset_bottom = 140.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
alignment = 1

[node name="MarginContainer3" type="MarginContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.01

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("2_osnlk")
text = "Website:"

[node name="Website" type="LineEdit" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("3_2mthw")
placeholder_text = "Enter Website Name Here"
expand_to_text_length = true
clear_button_enabled = true

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.01

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme = ExtResource("2_osnlk")
text = "Password:"

[node name="Password" type="LineEdit" parent="PanelContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme = ExtResource("3_2mthw")
placeholder_text = "Enter Password Here"
max_length = 20
expand_to_text_length = true
clear_button_enabled = true

[node name="Generate" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme = ExtResource("4_6lchc")
text = "Gen"

[node name="HBoxContainer5" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="PanelContainer/VBoxContainer/HBoxContainer5"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.35

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer5"]
layout_mode = 2
theme = ExtResource("2_osnlk")
text = "Length:"

[node name="Label2" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer5"]
layout_mode = 2
theme = ExtResource("2_osnlk")

[node name="HSlider" type="HSlider" parent="PanelContainer/VBoxContainer/HBoxContainer5"]
layout_mode = 2
size_flags_horizontal = 3
theme = SubResource("Theme_ue65u")
min_value = 8.0
max_value = 20.0
value = 8.0
rounded = true

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/VBoxContainer/HBoxContainer5"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.35

[node name="MarginContainer2" type="MarginContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.01

[node name="HBoxContainer3" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.35

[node name="Save" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("4_6lchc")
text = "Save"

[node name="MarginContainer2" type="MarginContainer" parent="PanelContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.35

[node name="HBoxContainer4" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.35

[node name="Cancel" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("4_6lchc")
text = "Cancel
"

[node name="MarginContainer2" type="MarginContainer" parent="PanelContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.35

[node name="MarginContainer4" type="MarginContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.01

[connection signal="focus_exited" from="PanelContainer" to="." method="_on_panel_container_focus_exited"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer2/Generate" to="." method="_on_generate_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer3/Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer4/Cancel" to="." method="_on_cancel_pressed"]
